# angle-raghav

./: .gitignore  ElasticStrainAnalyzer.spec  README.md  app.py  build_app.bat  build_app.sh  make_debug_frames.py  pyproject.toml  requirements.txt  test_tracker.py  tracker.py
.github/workflows/: build-windows.yml
