[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "strain-analyzer"
version = "1.0.0"
description = "Automatic elastic-strain measurement from three-point crystal-bending microscopy video."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Raghav Lab" }]
dependencies = [
    "opencv-python>=4.10",
    "numpy>=2.0",
    "Pillow>=10.0",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "matplotlib>=3.8",
]

[project.scripts]
# After `pip install .` users can simply run `strain-analyzer`.
strain-analyzer = "app:main"

[tool.setuptools]
py-modules = ["app", "tracker"]
